--- a/DZ_PT_WinForms_2_2/Form1.resx
+++ b/DZ_PT_WinForms_2_2/Form1.resx
@@ -120,4 +120,7 @@
   <metadata name="contextMenuStrip_EditDelete.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>25, 19</value>
   </metadata>
+  <metadata name="contextMenuStrip_About.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>235, 19</value>
+  </metadata>
 </root>
